package strategy;

import factory.Factory;

public interface Strategy {
    Factory criarBib();
}
